Fixed bug with z-index levels for touch-buttons-bar and modal window.

--- a/client/src/components/Modal/Modal.css
+++ b/client/src/components/Modal/Modal.css
@@ -2,7 +2,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 110;
+  z-index: 10000;
   height: 100%;
   width: 100%;
   display: flex;
